# lib-django-quickwit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
django_quickwit_log/: __init__.py  apps.py  config.py  management.py
django_quickwit_log/client/: __init__.py  exceptions.py  quickwit_client.py
django_quickwit_log/docker/: docker-compose.yml
django_quickwit_log/docker/config/: quickwit.yaml
django_quickwit_log/handlers/: __init__.py  json_formatter.py  quickwit_handler.py
django_quickwit_log/management/: __init__.py
django_quickwit_log/management/commands/: quickwit_create_indexes.py  quickwit_health_check.py  quickwit_sync.py
django_quickwit_log/storage/: __init__.py  exceptions.py  minio_storage.py
django_quickwit_log/utils/: __init__.py  constants.py  log_processor.py  quickwit_logger.py  structlog_quickwit_processor.py
